--- a/src/components/product/ProductModal.css
+++ b/src/components/product/ProductModal.css
@@ -44,27 +44,27 @@
     margin-bottom: 20px;
   }
   
-  .product-image {
+  .product-image2 {
     max-width: 100%;
     height: auto;
-    height: 420px;
+    max-height: 45vh;
   }
   
   .product-details {
     text-align: center;
     margin-bottom: 0px;
-    margin-top: -35px;
+    margin-top: -15px;
   }
   
   .product-image-detail-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px; /* Agregamos un margen superior para separar las imágenes del contenido anterior */
+    margin-top: 10px; /* Agregamos un margen superior para separar las imágenes del contenido anterior */
   }
   
   .product-image-detail {
     width: 150px; /* Aumentamos el tamaño de las imágenes de detalle */
-    max-height: 420px; /* Aumentamos el tamaño máximo */
+    max-height: 350px; /* Aumentamos el tamaño máximo */
     object-fit: cover;
     cursor: pointer; /* Agregamos un cursor de puntero al pasar el mouse por encima */
     transition: transform 0.3s; /* Agregamos una transición suave */
@@ -86,6 +86,7 @@
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); /* Sombra al resaltar */
+    margin-bottom: -5px;
   }
   
   .product-buy-button:hover {
